--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.21",
-    "@mdx-js/react": "^1.0.21",
     "gatsby": "^2.13.9",
-    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sass": "^2.1.0",
+    "gatsby-plugin-sharp": "^2.2.3",
+    "gatsby-remark-images": "^3.1.3",
+    "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.1.2",
     "gatsby-transformer-remark": "^2.6.1",
     "node-sass": "^4.12.0",
