--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -28,6 +28,8 @@ instant_preview: true
 build:
   preview_command: gatsby build
   publish_command: gatsby build
+  preview_env: 
+  - NODE_ENV=development
   preview_output_directory: public/
   output_directory: public
   instant_preview_command: gatsby develop -H 0.0.0.0 -p 8080
