--- a/config.json
+++ b/config.json
@@ -1,8 +1,11 @@
 {
   "title": "A Lumberjack's Blog",
   "description": "Notes on the arboreal universe, tips on using Forestry with Gatsby.",
-  "about": "This Lumberjack hails from the Pacific Northwest, specializing in fir, spruce & pine. Along with dendrology, this Lumberjack is a JAMstack aficionado. This site is built with Gatsby and the content is managed with git-backed CMS, Forestry. ",
   "contact": {
-    "email": "info@forestry.io"
+    "email": "info@forestry.io",
+    "twitter_handle": "@forestryio",
+    "twitter_url": "https://twitter.com/forestryio",
+    "github_handle": "forestryio",
+    "github_url": "https://github.com/forestryio"
   }
 }
