adjusting styles & primary color

--- a/config.json
+++ b/config.json
@@ -8,6 +8,6 @@
     "github_handle": "forestryio",
     "github_url": "https://github.com/forestryio"
   },
-  "primary_color": "#AC0217",
+  "primary_color": "#707070",
   "repository_url": "https://github.com/forestryio/starter-blog-gatsby"
 }
