--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^2.1.2",
     "gatsby-transformer-remark": "^2.6.1",
     "gatsby-transformer-sharp": "^2.2.1",
+    "gatsby-transformer-yaml": "^2.2.4",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
