added dev script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "@forestryio",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
