--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "title": "A Blog Title",
+  "title": "Brevifolia Theme",
   "description": "Starter blog using Forestry CMS with Gatsby.",
   "contact": {
     "email": "info@forestry.io",
