fixed filepath for data config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "kendall strautman",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop",
+    "dev": "gatsby develop -o",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
