--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -7,7 +7,7 @@ sections:
 - type: heading
   label: Content
 - type: directory
-  path: src/content/posts
+  path: content/posts
   label: Blog Posts
   create: documents
   match: "**/*"
@@ -15,15 +15,15 @@ sections:
   templates:
   - blog-post
 - type: document
-  path: src/content/data/authors.yaml
+  path: content/data/authors.yaml
   label: Author List
 - type: heading
   label: General Config
 - type: document
   path: config.json
   label: Site Info
-upload_dir: src/content/images
-public_path: "/src/content/images"
+upload_dir: content/images
+public_path: "/content/images"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
