updating authors & blog post h1

--- a/content/data/authors.yaml
+++ b/content/data/authors.yaml
@@ -1,8 +1,8 @@
----
 authors:
-- Owsley Stanley
+- Paramhansa Yogananda
 - Walt Whitman
 - Grace Hopper
 - Ralph Waldo Emerson
-- Albert Hoffman
+- Valentina Tereshkova
+- Siddhartha Gautama
 - Watson & Crick
