--- a/package.json
+++ b/package.json
@@ -16,22 +16,24 @@
     "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "dependencies": {
-    "gatsby": "^2.13.9",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sass": "^2.1.0",
-    "gatsby-plugin-sharp": "^2.2.3",
-    "gatsby-remark-images": "^3.1.3",
+    "gatsby": "^2.23.12",
+    "gatsby-image": "^2.4.9",
+    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-sass": "^2.3.7",
+    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-remark-images": "^3.3.14",
     "gatsby-remark-normalize-paths": "^1.0.0",
-    "gatsby-remark-relative-images": "^0.2.2",
-    "gatsby-source-filesystem": "^2.1.2",
-    "gatsby-transformer-remark": "^2.6.1",
-    "gatsby-transformer-sharp": "^2.2.1",
-    "gatsby-transformer-yaml": "^2.2.4",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-remark": "^2.8.20",
+    "gatsby-transformer-sharp": "^2.5.7",
+    "gatsby-transformer-yaml": "^2.4.6",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
